beta-0.2

Fixes:
- Incorporate the Western Territories timeout set to 30 years.
- Fixed the issue that the event "moh_agitators.2" (Wuxu Reform) could not be triggered.

beta-0.2.1

Fixes:
- Incorporate the Western Territories bug fix.

beta-0.3

Fixes:
- Compatibility with historical population growth and resources.
- Fixed tons of errors triggered by c:CHI ?= this.
- Incorporate the Western Territories percentage error.

beta-0.3.1

Fixes:
- Temporarily removed Prince Gong.

Changes:
- Xinhai JE new triggers.

beta-0.3.2

Changes:
- Korean translation by manchikim & Winterboy.
- Xianfeng JE now has description for the way of reducing the pressure of the Emperor.

beta-0.3.3

Fixes:
- Localization dupulication.

beta-0.3.4

Changes:
- New Fragile Unity JE.
- If you failed Xinhai Revolution JE, China will shattered into warlords.

beta-0.4

Changes:
- Let Lin Zexu no longer die easily.
- New Xinhai Revolution JE.
[img]https://i.imgur.com/CAABFis.png[/img]