@@ -216,3 +216,9 @@ modifier_mandate_of_heaven = {
 	icon = gfx/interface/icons/timed_modifier_icons/modifier_hat_negative.dds
 	country_diplomatic_play_maneuvers_add = -25
 }
+
+# 禁绝鸦片
+modifier_ban_opium_communism = {
+	icon = gfx/interface/icons/timed_modifier_icons/modifier_fist_positive.dds
+	country_prestige_add = 25
+}
