@@ -148,3 +148,6 @@
   je_xinhai_huangxing_d_tt: "#bold Huang Xing#!\n@green_checkmark!Excuted"
   je_xinhai_wangjingwei_d_tt: "#bold Wang Jingwei#!\n@green_checkmark!Excuted"
   je_xinhai_qiujin_d_tt: "#bold Qiu Jin#!\n@green_checkmark!Excuted"
+  je_opium_communism: "Root Out Opium"
+  je_opium_communism_reason: "Opium is a shame for [ROOT.GetCountry.GetName]. Since the late Qing Dynasty, events like the Opium Wars and the opium trade have brought disgrace to our nation and subjected us to foreign powers' bullying.\n\nNow that we have a strong government, we must eradicate opium and free our country from this shame."
+  je_opium_communism_complete_tt: "The progress bar has reached #variable 100%#!"
