@@ -30,3 +30,4 @@
   modifier_wuxu_authority: "Abuse of Power"
   modifier_conservatism_grow: "Conservatism Grow"
   modifier_mandate_of_heaven: "Mandate of Heaven"
+  modifier_ban_opium_communism: "Eliminated Opium"
