@@ -30,3 +30,4 @@
   modifier_wuxu_authority: "维新派滥权"
   modifier_conservatism_grow: "保守派抬头"
   modifier_mandate_of_heaven: "天朝上国"
+  modifier_ban_opium_communism: "鸦片绝迹"
