@@ -47,3 +47,8 @@ Changes:
 - Let Lin Zexu no longer die easily.
 - New Xinhai Revolution JE.
 [img]https://i.imgur.com/CAABFis.png[/img]
+
+beta-0.4.1
+
+Changes:
+- You can now ban opium even if you have lost the opium wars. (You should be a council republic)
